Fix: display of navigation bar on small devices

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -24,7 +24,6 @@
   -webkit-text-fill-color: transparent;
 
   animation: textclip 2s linear;
-  display: inline-block;
 
   font-size: 1.8rem;
   font-weight: 700;
